build: release version 1.6.0